Fixed image distortion on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ h6 {
     box-shadow: -10px -10px 10px 5px lightgray;
     width: 50%;
     height: auto;
-    object-fit: contain;
+    max-height: 300px;
 }
 
 .project-descr {
